tests/invalid/pow_mismatched_types/main.py
def run_case() -> None:
    x: int = 2

    y: float = 3.0

    z: float = pow(x, y)

if __name__ == "__main__":
    run_case()
